# MLP

./: .gitignore  README.md  pyproject.toml  setup.py
example/: example.py
mlp/: __init__.py
mlp/core/: mlp.py  optim.py
mlp/core/layers/: activations.py  dense.py  layer.py
mlp/core/utils/: activations.py  losses.py
mlp/utils/: dataloader.py  losses.py  save_load_model.py
